@@ -240,3 +240,5 @@ parity.loader has a much improved loading failure output, which allows for much 
 parity.inspector verbose processing status output is now much more readable.
 
 parity.runtime doesn't allow for more than 3 nested exceptions before doing a hard exit. in previous versions exceptions kept flying until stack space was too low.
+
+parity.inspector has now a much improved memory utilization and overal performance.
